# oge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sonarcloud.yml
oge/: __init__.py  __main__.py  canvas.py  cli.py  model.py  paths.py  ui.py
tests/: __init__.py  test_canvas.py  test_model.py  test_paths.py  test_ui.py
